--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-hacker
 title:Welcome to the Warren homepage!
 description: Feel free to bookmark this too keep am eye on my project updates
